Implement first "complete" version of the compiler
The compiler includes a basic recursive descent parser, some very simple
analysis passes on the ASTs, and a naive interpreter